fix width scrollbar showing up in dashboard for mobile

--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -62,6 +62,8 @@ hr{
         margin: 0;
         border-radius: 10% / 5%;
         margin-bottom: 15px;
+        margin-right: 30px;
+        padding: 15px;
     }
 
     .entireProfile{
